--- a/index.html
+++ b/index.html
@@ -36,21 +36,36 @@
         </nav>
         <ul class="list header-center">
           <li class="contacts-item">
-            <a class="link header-contact" href="mailto:info@devstudio.com"
-              >info@devstudio.com</a
-            >
+            <div class="icon-contacts">
+              <svg width="16" height="12">
+                <use href="./images/icons/icons.svg#icon-envelope-ico"></use>
+              </svg>
+              <a
+                class="link header-contact icon-contacts contact-list-item"
+                href="mailto:info@devstudio.com"
+                >info@devstudio.com</a
+              >
+            </div>
           </li>
+
           <li class="contacts-item">
-            <a class="link header-contact" href="tel:+380961111111"
-              >+38 096 111 11 11</a
-            >
+            <div class="icon-contacts">
+              <svg width="10" height="16">
+                <use href="./images/icons/icons.svg#icon-smart-ico"></use>
+              </svg>
+              <a
+                class="link header-contact icon-contacts contact-list-item"
+                href="tel:+380961111111"
+                >+38 096 111 11 11</a
+              >
+            </div>
           </li>
         </ul>
       </div>
     </header>
 
     <main>
-      <section class="hero unit-background section">
+      <section class="hero section">
         <div class="container hero-container">
           <h1 class="hero-header">Ефективні рішення для вашого бізнесу</h1>
           <button class="hero-btn" type="button">Замовити послугу</button>
@@ -62,6 +77,11 @@
           <h2 class="visually-hidden">Переваги компанії</h2>
           <ul class="list advantage-list">
             <li class="advantage-item">
+              <div class="advantage-ico">
+                <svg width="70" height="70">
+                  <use href="./images/icons/icons.svg#icon-antenna"></use>
+                </svg>
+              </div>
               <h3 class="advantage-header">Увага до деталей</h3>
               <p class="advantage-paragraph">
                 Ідейні міркування, і навіть початок повсякденної роботи з
@@ -69,6 +89,11 @@
               </p>
             </li>
             <li class="advantage-item">
+              <div class="advantage-ico">
+                <svg width="70" height="70">
+                  <use href="./images/icons/icons.svg#icon-clock"></use>
+                </svg>
+              </div>
               <h3 class="advantage-header">Пунктуальність</h3>
               <p class="advantage-paragraph">
                 Завдання організації, особливо рамки і місце навчання кадрів
@@ -76,12 +101,22 @@
               </p>
             </li>
             <li class="list advantage-item">
+              <div class="advantage-ico">
+                <svg width="70" height="70">
+                  <use href="./images/icons/icons.svg#icon-diagram"></use>
+                </svg>
+              </div>
               <h3 class="advantage-header">Планування</h3>
               <p class="advantage-paragraph">
                 Так само консультація з широким активом значною мірою зумовлює.
               </p>
             </li>
             <li class="list advantage-item">
+              <div class="advantage-ico">
+                <svg width="70" height="70">
+                  <use href="./images/icons/icons.svg#icon-astronaut"></use>
+                </svg>
+              </div>
               <h3 class="advantage-header">Сучасні технології</h3>
               <p class="advantage-paragraph">
                 Значимість цих проблем настільки очевидна, що реалізація
@@ -134,6 +169,43 @@
               <div class="job-caption">
                 <h3 class="employee-name">Ігор Дем'яненко</h3>
                 <p class="job-title" lang="en">Product Designer</p>
+
+                <ul class="list job-links">
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -145,6 +217,42 @@
               <div class="job-caption">
                 <h3 class="employee-name">Ольга Рєпіна</h3>
                 <p class="job-title" lang="en">Frontend Developer</p>
+                <ul class="list job-links">
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -156,6 +264,42 @@
               <div class="job-caption">
                 <h3 class="employee-name">Микола Тарасов</h3>
                 <p class="job-title" lang="en">Marketing</p>
+                <ul class="list job-links">
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
             </li>
             <li class="team-item">
@@ -167,7 +311,96 @@
               <div class="job-caption">
                 <h3 class="employee-name">Михайло Єрмаков</h3>
                 <p class="job-title" lang="en">UI Designer</p>
+                <ul class="list job-links">
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-instagram"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use href="./images/icons/icons.svg#icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-facebook"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="job-link-item">
+                    <a class="team-link-social" href="">
+                      <svg class="job-link-logo" width="20" height="20">
+                        <use
+                          href="./images/icons/icons.svg#icon-linkedin"
+                        ></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
               </div>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section class="section-permanent-clients">
+        <div class="container">
+          <h2 class="section-header permanent-clients-header">
+            Постійні клієнти
+          </h2>
+          <ul class="list permanent-clients-list">
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="41" height="48">
+                  <use href="./images/icons/icons.svg#icon-yaco"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="40" height="52">
+                  <use href="./images/icons/icons.svg#icon-company-win"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="44" height="41">
+                  <use
+                    href="./images/icons/icons.svg#icon-company-orange"
+                  ></use>
+                </svg>
+              </a>
+            </li>
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="85" height="40">
+                  <use href="./images/icons/icons.svg#icon-foster-peters"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="63" height="45">
+                  <use href="./images/icons/icons.svg#icon-brand"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="permanent-clients-item">
+              <a class="permanent-clienst-content" href="">
+                <svg width="94" height="44">
+                  <use href="./images/icons/icons.svg#icon-tag-line"></use>
+                </svg>
+              </a>
             </li>
           </ul>
         </div>
@@ -175,25 +408,60 @@
     </main>
 
     <footer class="footer unit-background">
-      <div class="container">
-        <a class="link logo-link" href=""
-          ><span class="logo-web">Web</span>Studio</a
-        >
-        <address class="address-footer">
-          <p>м. Київ, пр-т Лесі Українки, 26</p>
-          <ul class="list adress-list">
-            <li class="adress-items">
-              <a class="link footer-contacts" href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
+      <div class="container footer-content">
+        <div class="">
+          <a class="link logo-link" href=""
+            ><span class="logo-web">Web</span>Studio</a
+          >
+          <address class="address-footer">
+            <p>м. Київ, пр-т Лесі Українки, 26</p>
+            <ul class="list adress-list">
+              <li class="adress-items">
+                <a class="link footer-contacts" href="mailto:info@devstudio.com"
+                  >info@devstudio.com</a
+                >
+              </li>
+              <li class="adress-items">
+                <a class="link footer-contacts" href="tel:+380961111111"
+                  >+38 096 111 11 11</a
+                >
+              </li>
+            </ul>
+          </address>
+        </div>
+        <div class="footer-join">
+          <h2 class="footer-header">Приєднуйтесь</h2>
+          <ul class="list socials-links">
+            <li class="socials-link-item">
+              <a class="footer-link-social" href="">
+                <svg class="socials-link-logo" width="20" height="20">
+                  <use href="./images/icons/icons.svg#icon-instagram"></use>
+                </svg>
+              </a>
             </li>
-            <li class="adress-items">
-              <a class="link footer-contacts" href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
+            <li class="socials-link-item">
+              <a class="footer-link-social" href="">
+                <svg class="socials-link-logo" width="20" height="20">
+                  <use href="./images/icons/icons.svg#icon-twitter"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-link-item">
+              <a class="footer-link-social" href="">
+                <svg class="socials-link-logo" width="20" height="20">
+                  <use href="./images/icons/icons.svg#icon-facebook"></use>
+                </svg>
+              </a>
+            </li>
+            <li class="socials-link-item">
+              <a class="footer-link-social" href="">
+                <svg class="socials-link-logo" width="20" height="20">
+                  <use href="./images/icons/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a>
             </li>
           </ul>
-        </address>
+        </div>
       </div>
     </footer>
   </body>
