--- a/portfolio.html
+++ b/portfolio.html
@@ -24,43 +24,41 @@
           >
           <ul class="list menu">
             <li class="menu-item">
-              <a class="link menu-nav" href="./index.html">Студія</a>
+              <a class="link menu-link" href="./index.html">Студія</a>
             </li>
             <li class="menu-item">
-              <a class="link menu-nav current" href="./portfolio.html"
+              <a class="link menu-link current" href="./portfolio.html"
                 >Порфоліо</a
               >
             </li>
             <li class="menu-item">
-              <a class="link menu-nav" href="">Контакти</a>
+              <a class="link menu-link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="list header-center">
           <li class="contacts-item">
-            <div class="icon-contacts">
-              <svg width="16" height="12">
+            <a
+              class="link header-contact-link icon-contacts"
+              href="mailto:info@devstudio.com"
+            >
+              <svg class="header-contact-svg" width="16" height="12">
                 <use href="./images/icons/icons.svg#icon-envelope-ico"></use>
               </svg>
-              <a
-                class="link header-contact icon-contacts contact-list-item"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </div>
+              info@devstudio.com</a
+            >
           </li>
 
           <li class="contacts-item">
-            <div class="icon-contacts">
-              <svg width="10" height="16">
+            <a
+              class="link header-contact-link icon-contacts"
+              href="tel:+380961111111"
+            >
+              <svg class="header-contact-svg" width="10" height="16">
                 <use href="./images/icons/icons.svg#icon-smart-ico"></use>
               </svg>
-              <a
-                class="link header-contact icon-contacts contact-list-item"
-                href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </div>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -69,26 +67,24 @@
     <main>
       <section class="section">
         <div class="container">
-          <div>
-            <h1 class="visually-hidden">Фильтр</h1>
-            <ul class="list filter-list">
-              <li class="filter-item">
-                <button class="btn" type="button">Все</button>
-              </li>
-              <li class="filter-item">
-                <button class="btn" type="button">Веб-сайти</button>
-              </li>
-              <li class="filter-item">
-                <button class="btn" type="button">Додатки</button>
-              </li>
-              <li class="filter-item">
-                <button class="btn" type="button">Дизайн</button>
-              </li>
-              <li class="filter-item">
-                <button class="btn" type="button">Маркетинг</button>
-              </li>
-            </ul>
-          </div>
+          <h1 class="visually-hidden">Фильтр</h1>
+          <ul class="list filter-list">
+            <li class="filter-item">
+              <button class="btn" type="button">Все</button>
+            </li>
+            <li class="filter-item">
+              <button class="btn" type="button">Веб-сайти</button>
+            </li>
+            <li class="filter-item">
+              <button class="btn" type="button">Додатки</button>
+            </li>
+            <li class="filter-item">
+              <button class="btn" type="button">Дизайн</button>
+            </li>
+            <li class="filter-item">
+              <button class="btn" type="button">Маркетинг</button>
+            </li>
+          </ul>
           <ul class="list samples-list">
             <li class="samples-item">
               <img
