--- a/index.html
+++ b/index.html
@@ -24,41 +24,39 @@
           >
           <ul class="list menu">
             <li class="menu-item">
-              <a class="link menu-nav current" href="./index.html">Студія</a>
+              <a class="link menu-link current" href="./index.html">Студія</a>
             </li>
             <li class="menu-item">
-              <a class="link menu-nav" href="./portfolio.html">Порфоліо</a>
+              <a class="link menu-link" href="./portfolio.html">Порфоліо</a>
             </li>
             <li class="menu-item">
-              <a class="link menu-nav" href="">Контакти</a>
+              <a class="link menu-link" href="">Контакти</a>
             </li>
           </ul>
         </nav>
         <ul class="list header-center">
           <li class="contacts-item">
-            <div class="icon-contacts">
-              <svg width="16" height="12">
+            <a
+              class="link header-contact-link icon-contacts"
+              href="mailto:info@devstudio.com"
+            >
+              <svg class="header-contact-svg" width="16" height="12">
                 <use href="./images/icons/icons.svg#icon-envelope-ico"></use>
               </svg>
-              <a
-                class="link header-contact icon-contacts contact-list-item"
-                href="mailto:info@devstudio.com"
-                >info@devstudio.com</a
-              >
-            </div>
+              info@devstudio.com</a
+            >
           </li>
 
           <li class="contacts-item">
-            <div class="icon-contacts">
-              <svg width="10" height="16">
+            <a
+              class="link header-contact-link icon-contacts"
+              href="tel:+380961111111"
+            >
+              <svg class="header-contact-svg" width="10" height="16">
                 <use href="./images/icons/icons.svg#icon-smart-ico"></use>
               </svg>
-              <a
-                class="link header-contact icon-contacts contact-list-item"
-                href="tel:+380961111111"
-                >+38 096 111 11 11</a
-              >
-            </div>
+              +38 096 111 11 11</a
+            >
           </li>
         </ul>
       </div>
@@ -359,21 +357,21 @@
           </h2>
           <ul class="list permanent-clients-list">
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="41" height="48">
                   <use href="./images/icons/icons.svg#icon-yaco"></use>
                 </svg>
               </a>
             </li>
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="40" height="52">
                   <use href="./images/icons/icons.svg#icon-company-win"></use>
                 </svg>
               </a>
             </li>
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="44" height="41">
                   <use
                     href="./images/icons/icons.svg#icon-company-orange"
@@ -382,21 +380,21 @@
               </a>
             </li>
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="85" height="40">
                   <use href="./images/icons/icons.svg#icon-foster-peters"></use>
                 </svg>
               </a>
             </li>
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="63" height="45">
                   <use href="./images/icons/icons.svg#icon-brand"></use>
                 </svg>
               </a>
             </li>
             <li class="permanent-clients-item">
-              <a class="permanent-clienst-content" href="">
+              <a class="permanent-clienst-link" href="">
                 <svg width="94" height="44">
                   <use href="./images/icons/icons.svg#icon-tag-line"></use>
                 </svg>
